--- a/assets/css/registrarse.css
+++ b/assets/css/registrarse.css
@@ -46,6 +46,20 @@ button:hover{
     background-color: grey;
 }
 .section-left{
+    padding: 0;
+    margin: 0;
     width: 67%;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-left__form {
+    background-color: rgb(0, 0, 0, .4);
+    padding: 30px 15px;
+    box-sizing: border-box;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
 }
